--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,12 @@ jobs:
 
     - name: Test PHP extension
       run: |
-        echo 'extension=$(pwd)/modules/byiapocket.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+        ini_file=$(php --ini | grep "Loaded Configuration File" | cut -d: -f2 | tr -d ' ')
+        echo "extension=$(pwd)/modules/byiapocket.so" >> $ini_file
         echo '<?php echo confirm_byiapocket_compiled("byiapocket");' > test.php
         php test.php
-        
-    - name: Upload a Build Artifact
+
+    - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with:
         name: files
