--- a/.github/workflows/armeabi-v7a.yml
+++ b/.github/workflows/armeabi-v7a.yml
@@ -28,6 +28,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        composer install
         sudo apt-get update
         sudo apt-get install -y autoconf automake make gcc
 
