--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
-  "name": "pocketmine/ext-byiapocket",
+  "name": "ext-byiapocket",
   "type": "php-ext",
   "require": {
-    "php": "^8.3",
+    "php": "^8.0",
     "monolog/monolog": "*"
-    
   }
 }
